syntax = "proto3";

package example;

option java_package = "com.github.phisgr.example";

import "google/protobuf/empty.proto";

message GreetRequest {
    string username = 1;
    string name = 2;
}

message ChatMessage {
    string username = 1;
    string data = 2;

    int64 time = 3;
}

message RegisterRequest {
    string username = 1;
}

message RegisterResponse {
    string username = 1;
    string token = 2;
}

message CustomError {
    string message = 1;
}

service ChatService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Greet (GreetRequest) returns (ChatMessage);

    rpc Listen (google.protobuf.Empty) returns (stream ChatMessage);
    rpc Chat (stream ChatMessage) returns (stream ChatMessage);
}
